--- a/stylus-guide/package.json
+++ b/stylus-guide/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "compile": "stylus ./style/index.styl -o ./style/index.css"
+    "compile": "stylus -w ./style/index.styl -o ./style/index.css"
   },
   "keywords": [],
   "author": "",
