--- a/stylus-guide/package.json
+++ b/stylus-guide/package.json
@@ -12,5 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "stylus": "^0.54.7"
+  },
+  "devDependencies": {
+    "live-server": "^1.2.1"
   }
 }
