--- a/electron-demo/package.json
+++ b/electron-demo/package.json
@@ -4,7 +4,7 @@
   "description": "A minimal Electron application",
   "main": "main.js",
   "scripts": {
-    "start": "electron ."
+    "start": "nodemon --watch main.js --exec \"electron .\""
   },
   "keywords": [
     "Electron",
@@ -15,6 +15,7 @@
   ],
   "license": "ISC",
   "devDependencies": {
-    "electron": "^7.1.2"
+    "electron": "^7.1.2",
+    "nodemon": "^2.0.0"
   }
 }
