--- a/electron-demo/package.json
+++ b/electron-demo/package.json
@@ -15,6 +15,7 @@
   ],
   "license": "ISC",
   "devDependencies": {
+    "devtron": "^1.4.0",
     "electron": "^7.1.2",
     "nodemon": "^2.0.0"
   }
