--- a/webpack-vue-custom/package.json
+++ b/webpack-vue-custom/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "webpack-dev-server --config build/webpack.config.js --open",
     "build": "webpack --config build/webpack.config.js"
   },
   "keywords": [],
@@ -22,13 +23,18 @@
     "postcss-loader": "^3.0.0",
     "style-loader": "^1.1.2",
     "url-loader": "^3.0.0",
+    "vue-loader": "^15.8.3",
+    "vue-style-loader": "^4.1.2",
+    "vue-template-compiler": "^2.6.11",
     "webpack": "^4.41.4",
-    "webpack-cli": "^3.3.10"
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.10.1"
   },
   "dependencies": {
     "@babel/core": "^7.7.7",
     "@babel/polyfill": "^7.7.0",
     "@babel/preset-env": "^7.7.7",
-    "babel-loader": "^8.0.6"
+    "babel-loader": "^8.0.6",
+    "vue": "^2.6.11"
   }
 }
