--- a/webpack-vue-custom/package.json
+++ b/webpack-vue-custom/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "webpack-dev-server --config build/webpack.dev.js --open",
     "build": "webpack --config build/webpack.prod.js",
-    "dll": "webpack --config build/webpack.dll.config.js"
+    "dll": "webpack --config build/webpack.dll.config.js",
+    "analyz": "cross-env NODE_ENV=production npm_config_report=true npm run build"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +17,7 @@
     "cache-loader": "^4.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.1.1",
+    "cross-env": "^6.0.3",
     "css-loader": "^3.4.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^5.0.2",
@@ -34,6 +36,7 @@
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.11",
     "webpack": "^4.41.4",
+    "webpack-bundle-analyzer": "^3.6.0",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.1",
     "webpack-merge": "^4.2.2",
