--- a/juejin-book-vue-build/package.json
+++ b/juejin-book-vue-build/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "vue-cli-service serve --mode stage",
     "build": "vue-cli-service build"
   },
   "dependencies": {
@@ -19,6 +19,7 @@
     "@vue/cli-service": "^4.1.0",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.0",
+    "vconsole": "^3.3.4",
     "vue-template-compiler": "^2.6.10"
   },
   "browserslist": [
