--- a/juejin-book-vue-build/package.json
+++ b/juejin-book-vue-build/package.json
@@ -10,7 +10,8 @@
     "core-js": "^3.4.4",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
-    "vuex": "^3.1.2"
+    "vuex": "^3.1.2",
+    "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
